fix: исправила фон и gap

--- a/src/components/Guarantee/GuaranteeCard/styles.module.scss
+++ b/src/components/Guarantee/GuaranteeCard/styles.module.scss
@@ -30,7 +30,7 @@
 	}
 }
 
-@media screen and (max-width: 834px) {
+@media screen and (max-width: 934px) {
 	.guarantee-card {
 		flex-direction: column;
 		justify-content: center;
@@ -44,7 +44,7 @@
 			width: 100%;
 			align-items: center;
 			text-align: center;
-			gap: 11px;
+			gap: 10px;
 			// марджин убрать, когда будет слайдер
 			margin-bottom: 152px;
 
