--- a/src/components/Guarantee/styles.module.scss
+++ b/src/components/Guarantee/styles.module.scss
@@ -56,7 +56,7 @@
 }
 }
 
-@media screen and (max-width: 834px) {
+@media screen and (max-width: 934px) {
 	.guarantee {
 	padding: 80px 0 77px;
 	background-image: url('/images/guarantee/background-tablet.png');
@@ -75,19 +75,20 @@
 }
 
 @media screen and (max-width: 700px) {
-		.guarantee {
-	background-image: url('/images/guarantee/background-mobile.png');
-
-	&__container {
-		width: 72%;
-		@media screen and (max-width: 390px) {
-			width: 82%;
+	.guarantee {
+		background-image: url('/images/guarantee/background-mobile.png');
+		background-size: 100% 100%;
+		
+		&__container {
+			width: 72%;
+			@media screen and (max-width: 390px) {
+				width: 82%;
+			}
+		}
+		
+		&__title {
+			font-size: 40px;
+			margin-bottom: 52px;
 		}
 	}
-
-	&__title {
-		font-size: 40px;
-		margin-bottom: 52px;
-	}
-}
 }
